# boost-serialization-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
polymorphism/: CMakeLists.txt  archive.h  class_export.h  main.cpp  pentagon.cpp  pentagon.h  polygon.h  serialization.h  triangle.cpp  triangle.h
simple/: CMakeLists.txt  cube.hpp  main.cpp  map_container.hpp  serialization.h  unit_tests.cpp  vect_container.hpp
